k8s/service-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
    version: v1
spec:
  selector:
    matchLabels:
      app: service-a
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: service-a
        version: v1
    spec:
      serviceAccountName: bob-service-a
      containers:
      - name: service-a
        image: service-a
        imagePullPolicy: Never
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
    service: service-a
spec:
  selector:
    app: service-a
  ports:
  - port: 9000
    name: http
