k8s/service-b-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v1
  labels:
    app: service-b
    version: v1
spec:
  selector:
    matchLabels:
      app: service-b
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: service-b
        version: v1
    spec:
      serviceAccountName: bob-service-b
      containers:
      - name: service-b
        image: service-b-v1
        imagePullPolicy: Never
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
    service: service-b
spec:
  selector:
    app: service-b
  ports:
  - port: 9000
    name: http
