k8s/service-c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c-v1
  labels:
    app: service-c
    version: v1
spec:
  selector:
    matchLabels:
      app: service-c
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: service-c
        version: v1
    spec:
      serviceAccountName: bob-service-c
      containers:
      - name: service-c
        image: service-c
        imagePullPolicy: Never
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: service-c
  labels:
    app: service-c
    service: service-c
spec:
  selector:
    app: service-c
  ports:
  - port: 9000
    name: http
